@@ -18,4 +18,4 @@ requires:
   Exporter: 0
   XSLoader: 0
 tests: t/*.t
-version: 0.04
+version: 0.05
