@@ -1,3 +1,9 @@
+2007-05-09 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.05)
+
+	* t/reftaint.t: Specify how many tests are planned
+	* Util.pm: Don't inherit from Exporter
+	* Util.pm: POD: "used by perl" => "used by perl internally"
+
 2007-03-21 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.04)
 
 	* t/usage.t: Test for qr// taintness
